继续完善开发机